working on login button

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -14,6 +14,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
+        <form action="/" method="POST"><input name="username" /><a class="nav-item nav-link" href="/login"><button>Login</button></a></form>
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
