--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,6 +21,15 @@
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
       </div>
+      <div></div>
+      <div class="edit-section">
+        <h3 class="edit-text">Edit:</h3>
+        <form action="/urls/<%= id %>/edit" method="POST">
+          <label>New URL:</label>
+          <input name="newLongUrl" />
+          <button type="submit">submit</button>
+        </form>
+      </div>
       <div class="card-footer text-muted"></div>
     </div>
     <!-- Bootstrap JS -->
