--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,13 +17,14 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         <div class="nav-item nav-link"><% if (user) { %>
-          <h5>Welcome home,  <%=user.screenName %></h5> 
+          <h5>Welcome Home,  <%=user.screenName %></h5> 
           <form method="POST" action="logout">
             <button>Logout</button>
           </form>
         <% } else { %>
-          <h5>welcome home, son</h5>
-          <button><a href="/login">Login!</a></button>
+          <h5>Welcome Home, Son</h5>
+          <button><a href="/login">Login</a></button>
+          <button><a href="/register">Register</a></button>
        <% } %></div>
       </div>
     </div>
