--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
   <form method="POST" action="/login">
     <h1>Login Form</h1>
     <p>Username: <input type="text" name="username"/></p>
-    <p>Password: <input type="password" name="pass"/></p>
+    <p>Password: <input type="password" name="password"/></p>
     <button>LOGIN</button>
   </form>
   <script
