--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,7 +16,8 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <div class="nav-item nav-link"><% if (user) { %>
+        <div class="nav-item nav-link">
+          <% if (user) { %>
           <h5>Welcome Home,  <%=user.screenName %></h5> 
           <form method="POST" action="logout">
             <button>Logout</button>
