--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,6 +17,8 @@
     <title>Register</title>
   </head>
 <body>
+  <%- include('partials/_header') %>
+
   <h2>Create Account:</h2>
   <br>
   <form method="POST" action="/register">
@@ -39,5 +41,9 @@
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
   crossorigin="anonymous"
 ></script>
+
+<%- include('partials/_footer') %>
+
+
 </body>
 </html>
